wip : LottieAnimationView 작업중
- 팀원의 회원가입 로그인 변경으로 인해 작업상황 체크가 불가능해서 커밋해두고 확인하러 갑니다

--- a/ChatApp_1to1/app/src/main/res/layout/activity_plant_care.xml
+++ b/ChatApp_1to1/app/src/main/res/layout/activity_plant_care.xml
@@ -137,7 +137,7 @@
         app:layout_constraintEnd_toEndOf="parent"
     />
 
-    <!-- 🌿 경험치 기반 식물 (처음엔 GONE) -->
+    <!-- 🌿 경험치 기반 식물 (처음엔 GONE)
     <ImageView
         android:id="@+id/ivPlant"
         android:layout_width="150dp"
@@ -149,6 +149,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
+     -->
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/ivPlant"
+        android:layout_width="150dp"
+        android:layout_height="200dp"
+        android:layout_marginBottom="75dp"
+        android:visibility="gone"
+        app:lottie_fileName="plants/plant01.json"
+        app:lottie_autoPlay="false"
+        app:lottie_loop="false"
+        app:layout_constraintBottom_toTopOf="@+id/footerBackground"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 
     <!-- ✅ 버튼 영역만 위에 몰아서 -->
     <View
