chore : 스타트 버튼 위치 맞추기

--- a/ChatApp_1to1/app/src/main/res/layout/activity_start.xml
+++ b/ChatApp_1to1/app/src/main/res/layout/activity_start.xml
@@ -29,10 +29,10 @@
         android:layout_width="250dp"
         android:layout_height="55dp"
         android:layout_gravity="bottom|center_horizontal"
-        android:layout_marginBottom="380dp"
+        android:layout_marginBottom="280dp"
         android:background="@drawable/login_btn_bg"
         android:fontFamily="@font/bmjua"
-        android:text="시작하기"
+        android:text="시작하기🪴"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold" />
@@ -43,7 +43,7 @@
         android:layout_width="250dp"
         android:layout_height="55dp"
         android:layout_gravity="bottom|center_horizontal"
-        android:layout_marginBottom="290dp"
+        android:layout_marginBottom="180dp"
         android:background="@drawable/login_btn_bg"
         android:fontFamily="@font/bmjua"
         android:text="공식 웹사이트"
@@ -57,10 +57,10 @@
         android:layout_width="250dp"
         android:layout_height="55dp"
         android:layout_gravity="bottom|center_horizontal"
-        android:layout_marginBottom="200dp"
+        android:layout_marginBottom="80dp"
         android:background="@drawable/login_btn_bg"
         android:fontFamily="@font/bmjua"
-        android:text="기능준비중"
+        android:text="개발자 커피 사주기☕"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold" />
