--- a/ChatApp_1to1/app/src/main/res/layout/activity_signup.xml
+++ b/ChatApp_1to1/app/src/main/res/layout/activity_signup.xml
@@ -77,6 +77,37 @@
             <ImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
+                android:contentDescription="이름 아이콘"
+                android:src="@drawable/edit_bg_rounded" />
+
+            <EditText
+                android:id="@+id/SignupTextName"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="8dp"
+                android:layout_weight="1"
+                android:background="@null"
+                android:fontFamily="@font/bmjua"
+                android:hint="이름"
+                android:padding="0dp"
+                android:textColor="#000000"
+                android:textColorHint="#B0B0B0"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="300dp"
+            android:layout_height="47dp"
+            android:layout_marginBottom="24dp"
+            android:background="@drawable/edit_bg_rounded"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:contentDescription="아이디 아이콘"
                 android:src="@drawable/subtract" />
 
