wip : 공용json 기반 화분 작업중
- 공용json 기반 plant 경험치, 유저정보 불러와서 화분 표시 구현중
- pull 받아서 테스트하기 위함.

--- a/ChatApp_1to1/app/src/main/res/layout/activity_plant_care.xml
+++ b/ChatApp_1to1/app/src/main/res/layout/activity_plant_care.xml
@@ -123,7 +123,7 @@
 
     <!-- 하단 푸터 - 배경 -->
 
-    <!-- 🪴 고정된 화분 (항상 보임) -->
+    <!-- 🪴 고정된 화분 (항상 보임)
     <ImageView
         android:id="@+id/ivPot"
 
@@ -136,6 +136,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
     />
+    -->
 
     <!-- 🌿 경험치 기반 식물 (처음엔 GONE)
     <ImageView
@@ -150,6 +151,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         />
      -->
+
+    <!-- 외부 화분 -->
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/ivPlant"
         android:layout_width="150dp"
