feat : 코드페이지 UI 수정

--- a/ChatApp_1to1/app/src/main/res/drawable/bt_brown02_rounded.xml
+++ b/ChatApp_1to1/app/src/main/res/drawable/bt_brown02_rounded.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <!-- 박스 채우는 색 (초록색으로) -->
-    <solid android:color="#00C903" />
+    <solid android:color="#A69E93" />
 
     <!-- 모서리를 둥글게 -->
     <corners android:radius="30dp" />
