--- a/ChatApp_1to1/app/src/main/res/drawable/bt_gray01_rounded.xml
+++ b/ChatApp_1to1/app/src/main/res/drawable/bt_gray01_rounded.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <!-- 박스 채우는 색 (초록색으로) -->
-    <solid android:color="#7F6C5E" />
+    <solid android:color="#E7E7E7" />
 
     <!-- 모서리를 둥글게 -->
     <corners android:radius="30dp" />
