--- a/ChatApp_1to1/app/src/main/res/layout/activity_start.xml
+++ b/ChatApp_1to1/app/src/main/res/layout/activity_start.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/start"
+    android:background="@drawable/bg_start"
     tools:context=".MainActivity">
 
     <!-- 상단 갈색 띠 -->
