chore : 식물 사이즈 변경

--- a/ChatApp_1to1/app/src/main/res/layout/activity_plant_care.xml
+++ b/ChatApp_1to1/app/src/main/res/layout/activity_plant_care.xml
@@ -155,9 +155,9 @@
     <!-- 외부 화분 -->
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/ivPlant"
-        android:layout_width="150dp"
-        android:layout_height="200dp"
-        android:layout_marginBottom="75dp"
+        android:layout_width="300dp"
+        android:layout_height="400dp"
+        android:layout_marginBottom="40dp"
         android:visibility="gone"
         app:lottie_fileName="plants/plant01.json"
         app:lottie_autoPlay="false"
@@ -182,14 +182,14 @@
         android:layout_height="0dp"
         android:layout_margin="8dp"
         android:background="@drawable/bt_brown01_rounded"
-        android:src="@drawable/ic_water"
-        android:scaleType="centerInside"
         android:padding="12dp"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintTop_toTopOf="@+id/footerBackground"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_water"
         app:layout_constraintBottom_toBottomOf="@+id/footerBackground"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toStartOf="@+id/btnSunlight"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btnSunlight" />
+        app:layout_constraintTop_toTopOf="@+id/footerBackground" />
 
     <ImageButton
         android:id="@+id/btnSunlight"
