--- a/ChatApp_1to1/app/src/main/res/layout/activity_connection_request.xml
+++ b/ChatApp_1to1/app/src/main/res/layout/activity_connection_request.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="연결 신청"
+        android:fontFamily="@font/bmjua"
         android:textSize="24sp"
         android:textStyle="bold"
         android:layout_centerHorizontal="true"
