--- a/ChatApp_1to1/app/src/main/res/drawable/bottom_background.xml
+++ b/ChatApp_1to1/app/src/main/res/drawable/bottom_background.xml
@@ -2,4 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="#8B7355" />
+    <corners 
+        android:topLeftRadius="20dp"
+        android:topRightRadius="20dp"
+        android:bottomLeftRadius="0dp"
+        android:bottomRightRadius="0dp" />
 </shape> 
