--- a/ChatApp_1to1/app/src/main/res/layout/emotion_badge.xml
+++ b/ChatApp_1to1/app/src/main/res/layout/emotion_badge.xml
@@ -1,24 +1,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/emotionBadgeLayout"
-    android:layout_width="wrap_content"
+    android:layout_width="68dp"
     android:layout_height="32dp"
-    android:orientation="horizontal"
     android:background="@drawable/bg_emotion_badge"
     android:gravity="center_vertical"
+    android:orientation="horizontal"
     android:padding="4dp">
 
     <View
         android:id="@+id/emotionCircle"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginEnd="5dp"
         android:background="@drawable/bg_emotion_circle" />
 
     <TextView
         android:id="@+id/emotionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/bmjua"
         android:text="신남"
         android:textSize="16sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 </LinearLayout> 
