--- a/ChatApp_1to1/app/src/main/res/layout/md_item_modal.xml
+++ b/ChatApp_1to1/app/src/main/res/layout/md_item_modal.xml
@@ -27,6 +27,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="12dp"
         android:layout_marginTop="16dp"
+        android:scaleType="fitCenter"
         android:background="@android:color/transparent"
         tools:srcCompat="@tools:sample/avatars" />
 
