--- a/ChatApp_1to1/app/src/main/res/layout/activity_login.xml
+++ b/ChatApp_1to1/app/src/main/res/layout/activity_login.xml
@@ -149,6 +149,7 @@
             android:id="@+id/signupMove_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bmjua"
             android:text="계정이 없으신가요? 회원가입"
             android:textColor="#F5BFCB"
             android:textSize="14sp"
