--- a/ChatApp_1to1/app/src/main/res/layout/activity_signup.xml
+++ b/ChatApp_1to1/app/src/main/res/layout/activity_signup.xml
@@ -56,7 +56,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="45dp"
+            android:layout_marginBottom="20dp"
             android:fontFamily="@font/bmjua"
             android:gravity="center"
             android:text="SignUp"
@@ -169,7 +169,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="15dp"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -227,6 +227,7 @@
             android:layout_gravity="center"
             android:clickable="true"
             android:focusable="true"
+            android:fontFamily="@font/bmjua"
             android:text="이미 계정이 있으신가요? 로그인"
             android:textColor="#F5BFCB"
             android:textSize="14sp" />
