--- a/ChatApp_1to1/app/src/main/res/layout/activity_plant_care.xml
+++ b/ChatApp_1to1/app/src/main/res/layout/activity_plant_care.xml
@@ -53,19 +53,28 @@
         app:layout_constraintTop_toTopOf="@+id/headerBackground"
         app:layout_constraintVertical_bias="0.0" />
 
-    <View
-        android:id="@+id/mainBackground"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@drawable/bg_game"
-        app:layout_constraintBottom_toTopOf="@+id/footerBackground"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerBackground"
-        app:layout_constraintVertical_bias="1.0" />
+        <View
+            android:id="@+id/mainBackground"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@drawable/bg_game"
+            app:layout_constraintBottom_toTopOf="@+id/footerBackground"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/headerBackground"
+            app:layout_constraintVertical_bias="0.0" />
 
-    <FrameLayout
+        <ImageView
+            android:id="@+id/btnQuestList"
+            android:layout_width="55dp"
+            android:layout_height="62dp"
+            app:layout_constraintBottom_toTopOf="@+id/windowFrame"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/windowFrame"
+            app:srcCompat="@drawable/ic_quest" />
+
+        <FrameLayout
         android:id="@+id/windowFrame"
         android:layout_width="240dp"
         android:layout_height="236dp"
