--- a/ChatApp_1to1/app/src/main/res/layout/activity_quest_list.xml
+++ b/ChatApp_1to1/app/src/main/res/layout/activity_quest_list.xml
@@ -80,28 +80,29 @@
             android:orientation="horizontal"
             android:padding="8dp">
 
-            <!-- 신청자 이름 -->
+            <!-- 퀘스트 이름 -->
             <TextView
                 android:id="@+id/request_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="@font/bmjua"
-                android:text="퀘스트 이름"
-                android:textSize="24sp"
+                android:text="상대에게 '사랑해' 보내기"
+                android:textSize="22sp"
                 android:textStyle="bold" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/reject_button"
-                android:layout_width="wrap_content"
+                android:id="@+id/get_button"
+                android:layout_width="78dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:background="@drawable/login_btn_bg"
                 android:fontFamily="@font/bmjua"
                 android:text="받기"
                 android:textColor="#FFFFFF"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+                android:textSize="22sp"
+                android:textStyle="bold"
+                android:enabled="false"/>
 
         </LinearLayout>
 
