--- a/ChatApp_1to1/app/src/main/res/layout/activity_quest_list.xml
+++ b/ChatApp_1to1/app/src/main/res/layout/activity_quest_list.xml
@@ -50,11 +50,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="34dp"
-            android:layout_marginRight="8dp"
-            android:text="X"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="0dp"
+            android:text="❌"
             android:textColor="#FFFFFF"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <TextView
@@ -62,10 +62,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/closequest_button"
-            android:layout_marginTop="-28dp"
+            android:layout_marginTop="-24dp"
+            android:fontFamily="@font/bmjua"
             android:text="퀘스트 목록"
             android:textColor="#ffffff"
-            android:textSize="18sp"
+            android:textSize="25sp"
             android:textStyle="bold" />
 
         <LinearLayout
@@ -85,7 +86,7 @@
                 android:id="@+id/request_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:fontFamily="@font/bmjua"
                 android:text="상대에게 '사랑해' 보내기"
                 android:textSize="22sp"
@@ -97,14 +98,24 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:background="@drawable/login_btn_bg"
+                android:enabled="false"
                 android:fontFamily="@font/bmjua"
                 android:text="받기"
                 android:textColor="#FFFFFF"
                 android:textSize="22sp"
-                android:textStyle="bold"
-                android:enabled="false"/>
-
+                android:textStyle="bold" />
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/request_name2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+            android:fontFamily="@font/bmjua"
+            android:padding="10dp"
+            android:text="보상: 영양제 1개 (상시미션으로, 한 번 성공마다 받기 버튼을 눌러주셔야 합니다.)"
+            android:textSize="10sp"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
