feat : 배포를 위한 변경
- 패키지이름변경
- import 이름변경
- 파이어베이스 json 새로추가

--- a/ChatApp_1to1/app/src/main/res/layout/activity_codeinput.xml
+++ b/ChatApp_1to1/app/src/main/res/layout/activity_codeinput.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_send"
-    tools:context=".CodeInputActivity">
+    tools:context="com.mycompany.lovegarden.CodeInputActivity">
 
     <!-- 상단 헤더 - 녹색 배경 -->
     <View
